# docs/swagger.json
@@ -45,6 +45,12 @@
                         "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "视图类型",
+                        "name": "graphType",
+                        "in": "path"
+                    },
+                    {
                         "description": "集群信息",
                         "name": "cluster",
                         "in": "body",
